@@ -119,3 +119,92 @@ describe Gecode::Constraints::Set::Connection, ' (max)' do
   
   it_should_behave_like 'connection constraint'
 end
+
+describe Gecode::Constraints::Set::Connection, ' (sum)' do
+  before do
+    @model = Gecode::Model.new
+    @set = @model.set_var([], 0..9)
+    @target = @var = @model.int_var(0..20)
+    @model.branch_on @model.wrap_enum([@set])
+    @stub = @set.sum
+    
+    @expect = lambda do |relation, rhs, strength, reif_var, negated|
+      rhs = rhs.bind if rhs.respond_to? :bind
+      if reif_var.nil?
+        if !negated and relation == Gecode::Raw::IRT_EQ and 
+            rhs.kind_of? Gecode::Raw::IntVar 
+          Gecode::Raw.should_receive(:weights).once.with(
+            @model.active_space, anything, anything, @set.bind, rhs)
+          Gecode::Raw.should_receive(:rel).exactly(0).times
+        else
+          Gecode::Raw.should_receive(:weights).once.with(
+            @model.active_space, anything, anything, @set.bind, 
+            an_instance_of(Gecode::Raw::IntVar))
+          Gecode::Raw.should_receive(:rel).once.with(@model.active_space, 
+            an_instance_of(Gecode::Raw::IntVar), relation, rhs, 
+            strength)
+        end
+      else
+        Gecode::Raw.should_receive(:weights).once.with(@model.active_space, 
+          anything, anything, @set.bind, an_instance_of(Gecode::Raw::IntVar))
+        Gecode::Raw.should_receive(:rel).once.with(@model.active_space, 
+          an_instance_of(Gecode::Raw::IntVar), relation, rhs, reif_var.bind,
+          strength)
+      end
+    end
+  end
+  
+  it 'should constrain the sum of a set' do
+    @set.sum.must == @var
+    @model.solve!.should_not be_nil
+    @set.lub.inject(0){ |x, y| x + y }.should == @var.val
+  end
+  
+  it_should_behave_like 'connection constraint'
+end
+
+describe Gecode::Constraints::Set::Connection, ' (sum with weights)' do
+  before do
+    @model = Gecode::Model.new
+    @set = @model.set_var([], 0..9)
+    @target = @var = @model.int_var(-20..20)
+    @model.branch_on @model.wrap_enum([@set])
+    @weights = Hash[*(0..9).zip((-9..-0).to_a.reverse).flatten]
+    @stub = @set.sum(@weights)
+    
+    @expect = lambda do |relation, rhs, strength, reif_var, negated|
+      rhs = rhs.bind if rhs.respond_to? :bind
+      if reif_var.nil?
+        if !negated and relation == Gecode::Raw::IRT_EQ and 
+            rhs.kind_of? Gecode::Raw::IntVar 
+          Gecode::Raw.should_receive(:weights).once.with(
+            @model.active_space, anything, anything, @set.bind, rhs)
+          Gecode::Raw.should_receive(:rel).exactly(0).times
+        else
+          Gecode::Raw.should_receive(:weights).once.with(
+            @model.active_space, anything, anything, @set.bind, 
+            an_instance_of(Gecode::Raw::IntVar))
+          Gecode::Raw.should_receive(:rel).once.with(@model.active_space, 
+            an_instance_of(Gecode::Raw::IntVar), relation, rhs, 
+            strength)
+        end
+      else
+        Gecode::Raw.should_receive(:weights).once.with(@model.active_space, 
+          anything, anything, @set.bind, an_instance_of(Gecode::Raw::IntVar))
+        Gecode::Raw.should_receive(:rel).once.with(@model.active_space, 
+          an_instance_of(Gecode::Raw::IntVar), relation, rhs, reif_var.bind,
+          strength)
+      end
+    end
+  end
+  
+  it 'should constrain the sum of a set' do
+    @stub.must_be.in(-10..-1)
+    @model.solve!.should_not be_nil
+    weighted_sum = @set.glb.inject(0){ |sum, x| sum - x**2 }
+    weighted_sum.should > -10
+    weighted_sum.should < -1
+  end
+  
+  it_should_behave_like 'connection constraint'
+end
