@@ -2,6 +2,7 @@
 
 * Added channel constraints involving set variables.
 * Added set min and max constraints.
+* Added set sum constraints (optionally weighted).
 
 == Version 0.5.0
 This release adds set variables and some of their constraints, along with the 
